@startuml

class Autenticador {
    -politicas: HashSet<Regla>
    -List<String> mensajesParaImprimir

    +Boolean esValida(String contrasenia)
}

abstract class Regla {
    -mensajeError: String

    +Boolean esValida(String unaContrasenia, List<String> mensajes)
    +Boolean cumpleLaRegla(String unaContrasenia)
}

class CantidadMaximaDeCaracteres {
    -CantidadMaxima: Integer

    +Boolean esValida(String unaContrasenia, List<String> mensajes)
    +Boolean cumpleLaRegla(String unaContrasenia)
}

class CantidadMinimaDeCaracteres {
    -CantidadMinima: Integer

    +Boolean esValida(String unaContrasenia, List<String> mensajes)
    +Boolean cumpleLaRegla(String unaContrasenia)
}

class PerteneceAlArchivo {
    -palabrasDelArchivo: List<String>

    +Boolean esValida(String unaContrasenia, List<String> mensajes)
    +Boolean cumpleLaRegla(String unaContrasenia)
}

class TieneCaracteresEspeciales{
    +Boolean esValida(String unaContrasenia, List<String> mensajes)
    +Boolean cumpleLaRegla(String unaContrasenia)
}

class TieneMayusculasyMinusculas{
    +Boolean esValida(String unaContrasenia, List<String> mensajes)
    +Boolean cumpleLaRegla(String unaContrasenia)
}

class TieneNumeros{
    +Boolean esValida(String unaContrasenia, List<String> mensajes)
    +Boolean cumpleLaRegla(String unaContrasenia)
}

Autenticador o----"*" Regla
CantidadMaximaDeCaracteres --|> Regla
CantidadMinimaDeCaracteres --|> Regla
PerteneceAlArchivo --|> Regla
TieneCaracteresEspeciales --|> Regla
TieneMayusculasyMinusculas --|> Regla
TieneNumeros --|> Regla

@enduml